@@ -1,18 +1,20 @@
-Instalar Replication engine for DB2 Linux UNIX Windows
-=========================================================
+Instalar Replication engine for DB2 Linux 
+=========================================
 
-Descargar el Access Server que se requiera en este caso sera el 11.3
+Descargar el Access Server que se requiera en este caso sera el 11.3, part number CIU0UML
 http://www-01.ibm.com/support/docview.wss?uid=swg24038293
 
 Prerequisitos.::
 
-	# yum --disablerepo=\* --enablerepo=c6-media install basic-desktop glibc.i686 compat-libstdc++-33.i686
+	# yum -y install glibc compat-libstdc++-33
 
-Se requiere las librerias de runtime de i686, para CDC 11.3.3 ya corrigen este detalle.::
+Se requiere las librerias de runtime de i686 para el CDC, Con el instalador de CDC 11.3.3 ya corrigen este detalle.::
 
-	# instalar=`yum --disablerepo=\* --enablerepo=c6-media search X11 | grep i686 | grep runtime | awk -F":" '{print $1}'`		
+	# instalar=`yum search X11 | grep i686 | grep runtime | awk -F":" '{print $1}'`		
+	
 	# echo $instalar libICE.i686 libICE.x86_64 libSM.i686 libSM.x86_64 libXScrnSaver.i686 libXScrnSaver.x86_64 libXext.i686 libXext.x86_64 libXfont.i686 libXfont.x86_64 libXft.i686 libXft.x86_64 libXi.i686 libXi.x86_64 libXinerama.i686 libXinerama.x86_64 libXmu.i686 libXmu.x86_64 libXp.i686 libXp.x86_64 libXpm.i686 libXpm.x86_64 libXrandr.i686 libXrandr.x86_64 libXrender.i686 libXrender.x86_64 libXt.i686 libXt.x86_64 libXtst.i686 libXtst.x86_64 libXv.i686 libXv.x86_64 libXvMC.i686 libXvMC.x86_64 libXxf86dga.i686 libXxf86dga.x86_64 libXxf86misc.i686 libXxf86misc.x86_64 libXxf86vm.i686 libXxf86vm.x86_64 libdmx.i686 libdmx.x86_64 libfontenc.i686 libfontenc.x86_64 libxkbfile.i686 libxkbfile.x86_64
-		# yum --disablerepo=\* --enablerepo=c6-media install $instalar
+
+	# yum -y install $instalar
 
 
 
@@ -20,7 +22,7 @@ Descomprimir el paquete.::
 
 	# unzip IIDRCDC_10.2.1_DB2_Lnx_x86.zip
 
-Instalamos.::
+Verificamos el instalador y le otorgamos permisos de ejecución.::
 
 	# ls -l
 	total 186236
@@ -36,7 +38,7 @@ Instalamos.::
 
 	# chmod +x setup-cdc-linux-x86-db2luw.bin
 
-.::
+Procedemos a instalar.::
 
 	# ./setup-cdc-linux-x86-db2luw.bin 
 	Preparing to install...
@@ -107,9 +109,9 @@ Instalamos.::
 	  Default Install Folder: /opt/IBM/InfoSphereChangeDataCapture/ReplicationEngineforIBMDB2
 
 	ENTER AN ABSOLUTE PATH, OR PRESS <ENTER> TO ACCEPT THE DEFAULT
-		  : /opt/TS_Agents_DB2
+		  : /opt/TS_agent_DB2
 
-	INSTALL FOLDER IS: /opt/TS_Agents_DB2
+	INSTALL FOLDER IS: /opt/TS_agent_DB2
 	   IS THIS CORRECT? (Y/N): y
 
 	===============================================================================
@@ -122,7 +124,7 @@ Instalamos.::
 		IBM InfoSphere Change Data Capture (IBM DB2)
 
 	Install Folder:
-		/opt/TS_Agents_DB2
+		/opt/TS_agent_DB2
 
 	Link Folder:
 		/tmp/install.dir.6887/Do_Not_Install
@@ -147,10 +149,10 @@ Instalamos.::
 	----------------
 
 	Congratulations. IBM InfoSphere Change Data Capture (IBM DB2) has been successfully installed to:
-	   /opt/TS_Agents_DB2
+	   /opt/TS_agent_DB2
 
 	You can launch the Configuration Tool at any time by running
-	   /opt/TS_Agents_DB2/bin/dmconfigurets
+	   /opt/TS_agent_DB2/bin/dmconfigurets
 
 	Launch Configuration Tool? (1=Yes, 2=No) (DEFAULT: 1): 2
 
@@ -158,20 +160,122 @@ Nos aseguramos que nuestra conexion SSH tenga el forwarding de las X. o conectam
 
 	$ ssh -X root@192.168.56.11
 
+Cambiamos el propietario de la carpeta para que funcione el usuario replica::
+
+	# chown -R replica. /opt/TS_agent_DB2
+	# su - replica
+
 Ahora si podemos ejecutar la herramienta de configuracion .::
 
-   # /opt/TS_Agents_DB2/bin/dmconfigurets
+	$ /opt/TS_agent_DB2/bin/dmconfigurets
+
+Empieza el proceso de interacción con la configuración::
+
+	Welcome to the configuration tool for IBM InfoSphere Change Data Capture (IBM DB2). Use this tool to create instances of IBM InfoSphere Change Data Capture (IBM DB2).
+
+	Press ENTER to continue...
+
+	============================================
+
+	CONFIGURATION TOOL - CREATING A NEW INSTANCE
+	--------------------------------------------
+
+	Enter the name of the new instance: agent_DB2
+	Enter the server port number [10901]: 11003
+	Enter the auto-discovery port number or type 'DISABLE' [DISABLE]: 
+
+	Staging Store Disk Quota is used to limit the disk space used by IBM InfoSphere Change Data Capture staging Store. If this space is exhausted, this instance may run at a lower speed. The minimum value allowed is 1 GB. 
+
+	Enter the Staging Store Disk Quota for this instance (GB) [100]: 1
+	Enter the Maximum Memory Allowed for this instance (MB) [1024]: 256
+	Enter the bit version (32/64) [64]: 
+	Select y to use JMS or TCP/IP engine communication connection, select n to use TCP only engine communication connection (y/n) [n]: 
+	Select a DB2 Instance
+
+	1. db2iadm1
+	2. Other...
+
+	Select a DB2 Instance: 1
+	Select a database name
+
+	1. TEST_DB2
+	2. Other...
+
+	Select a database name: 1
+	Would you like to configure advanced parameters (y/n) [n]: 
+	Enter the username [db2iadm1]: 
+	Enter the password:Venezuela21
+	Retrieving schema list...
+	Metadata schema:
+
+	1. NULLID
+	2. SQLJ
+	3. SYSCAT
+	4. SYSFUN
+	5. SYSIBM
+	6. SYSIBMADM
+	7. SYSIBMINTERNAL
+	8. SYSIBMTS
+	9. SYSPROC
+	10. SYSPUBLIC
+	11. SYSSTAT
+	12. SYSTOOLS
+	13. TEST_DB2
+	14. Other...
+
+	Select a database schema for metadata tables [TEST_DB2]: 13
+	Would you like to specify a refresh loader path (y/n) [y]: 
+	Enter the refresh loader path (y/n) [y]:
+	Enter the refresh loader path: /opt/TS_agent_DB2
 
 
-.. figure:: ../images/01.png
-.. figure:: ../images/02.png
-.. figure:: ../images/03.png
-.. figure:: ../images/04.png
+	Creating a new instance. Please wait...
 
-Iniciar un agente
 
-$ /opt/TS_agents_target/bin/dmts64 -I agent_target &
+	Load API test failed and returned the following error A SQL exception has occurred. The SQL error code is '3107'. The SQL state is:      . The error message is: 
+	SQL3107W  At least one warning message was encountered during LOAD processing.
+	.
+	IBM InfoSphere Change Data Capture will not be able to serve as a target.
 
+	Instance agent_DB2 was successfully created.
+
+	Would you like to START instance agent_DB2 now (y/n)?n
+
+	===================================================
+
+	MAIN MENU
+	---------
+
+	1. List Current Instances
+	2. Add an Instance
+	3. Edit an Instance
+	4. Delete an Instance
+	5. Consolidate Instances
+
+	6. Exit
+
+	Enter your selection:6
+
+	Exiting...
+
+Iniciar el agente creado para DB2::
+
+	$ /opt/TS_agent_DB2/bin/dmts64 -I agent_DB2 &
+
+Verificamos el Proceso.::
+
+	$ ps -ef | grep TS_agent_DB2
+	replica   12261  10956 14 17:47 pts/2    00:00:06 /opt/TS_agent_DB2/jre64/jre/bin/dmts64-java -cp /opt/ibm/db2/V10.1/java/db2java.zip:/opt/ibm/db2/V10.1/java/db2jcc4.jar:/opt/ibm/db2/V10.1/java/db2jcc.jar:/opt/ibm/db2/V10.1/java/db2jcc_license_cisuz.jar:/opt/ibm/db2/V10.1/java/db2jcc_license_cu.jar:/opt/ibm/db2/V10.1/bin:/opt/ibm/db2/V10.1/java/common.jar:/opt/ibm/db2/V10.1/java/sqlj.zip:/opt/ibm/db2/V10.1/function:lib:lib/ts.jar:lib/activation.jar:lib/mail.jar:lib/pbembedded.jar:lib/pbclient.jar:lib/pbtools.jar:lib/cpci.jar:lib/api.jar:lib/commons-cli.jar:lib/asm-all-3.1.jar:lib/jlog.jar -Xmx256M -Xms192M -Xmine64M -XX:NewRatio=1 -Xgcpolicy:gencon -Dcom.sun.management.jmxremote -Djava.ext.dirs=lib/user:jre64/jre/lib/ext -Dcom.datamirror.ts.instance=agent_DB2 com.datamirror.ts.commandlinetools.script.Startup -I agent_DB2
+	replica   12337  10956  0 17:48 pts/2    00:00:00 grep --color=auto TS_agent_DB2
+
+
+Verificamos que levante el puerto que configuramos::
+
+	$ netstat -natp | grep -w 11003
+	tcp6       0      0 :::11003                :::*                    LISTEN      12261/dmts64-java 
+
+
+Listo ya tenemos el agente de CDC para DB2 operativo...!!!
 
 
 
